Bug 618487 - Divx Web Player Videos won't play on Vidbux.com and Vidxden.com and Movshare.net. r=josh a=blocking2.0BetaN+